<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_headline"
        android:layout_marginBottom="@dimen/checkout_flow_headline_bottom_margin"
        style="@style/HeadlineStyle" />

    <EditText
        style="@style/CheckoutFlowInputFieldStyle"
        android:inputType="textPersonName"
        android:hint="@string/signup_label_first_last_name" />

    <EditText
        style="@style/CheckoutFlowInputFieldStyle"
        android:inputType="textEmailAddress"
        android:hint="@string/signup_label_email_address" />

    <EditText
        style="@style/CheckoutFlowInputFieldStyle"
        android:inputType="phone"
        android:hint="@string/signup_label_mobile_number" />

    <EditText
        style="@style/CheckoutFlowInputFieldStyle"
        android:inputType="date"
        android:hint="@string/signup_label_dob" />

    <EditText
        style="@style/CheckoutFlowInputFieldStyle"
        android:inputType="number"
        android:hint="@string/signup_label_ssn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_tos"
        style="@style/SublineStyle" />

    <include
        layout="@layout/button_rounded_locked" />

</LinearLayout>