<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <ImageView
        android:layout_width="@dimen/verify_icon_size"
        android:layout_height="@dimen/verify_icon_size"
        android:layout_marginBottom="@dimen/verify_icon_bottom_margin"
        android:backgroundTint="@color/lockColor"
        android:background="@drawable/lock"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_headline"
        android:layout_marginBottom="@dimen/checkout_flow_headline_bottom_margin"
        style="@style/HeadlineStyle" />

    <TextView
        android:id="@+id/verify_subline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_message"
        style="@style/SublineStyle" />

    <EditText
        style="@style/CheckoutFlowInputFieldStyle"
        android:inputType="number"
        android:hint="@string/security_pin_hint" />

    <include layout="@layout/button_rounded_locked" />

</LinearLayout>